// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly when being deleted 1`] = `
<li
  className="src-modules-tag-components-editable-tag__tag"
>
  <span>
    One
  </span>
  <div
    className="src-modules-tag-components-editable-tag__loader"
  >
    <Loader
      size="small"
      type="inverse"
    />
  </div>
</li>
`;

exports[`should render correctly when not being deleted 1`] = `
<li
  className="src-modules-tag-components-editable-tag__tag"
>
  <span>
    One
  </span>
  <IconButton
    compact={true}
    icon={[Function]}
    onClick={[Function]}
    type="inverse"
  />
</li>
`;
